--- a/adaptive-icons/index.html
+++ b/adaptive-icons/index.html
@@ -92,6 +92,41 @@
 				</dd>
 			</dl>
 		</li>
+		<li>
+			<h3>Optimized</h3>
+			<dl>
+				<dt>24--Arrow-Right--Filled.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="optimized/Illustrator/24--Arrow-Right--Filled.svg#icon">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Arrow-Right--Outlined.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="optimized/Illustrator/24--Arrow-Right--Outlined.svg#icon">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Filled.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use href="optimized/Illustrator/24--Bug--Filled.svg#icon">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Outlined.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use href="optimized/Illustrator/24--Bug--Outlined.svg#icon">
+						</use>
+					</svg>
+				</dd>
+			</dl>
+		</li>
 	</ol>
 
 	<h2>Sketch</h2>
@@ -156,6 +191,37 @@
 				</dd>
 			</dl>
 		</li>
+		<li>
+			<h3>Optimized</h3>
+			<dl>
+				<dt>24--Arrow-Right--Filled.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use href="optimized/Sketch/24--Arrow-Right--Filled.svg#icon">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Arrow-Right--Outlined.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use href="optimized/Sketch/24--Arrow-Right--Outlined.svg#icon">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Filled.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use href="optimized/Sketch/24--Bug--Filled.svg#icon"></use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Outlined.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use href="optimized/Sketch/24--Bug--Outlined.svg#icon"></use>
+					</svg>
+				</dd>
+			</dl>
+		</li>
 	</ol>
 
 	<dl>
@@ -169,6 +235,9 @@
 			(<code>stroke-width: var(--stroke-width, 2)</code>) and attribute
 			<code>vector-effect="non-scaling-stroke"</code> defined within the SVG files.
 		</dd>
+		<dt>Optimized</dt>
+		<dd>Same as <i>Regular</i>, but additionally run through <a href="https://imageoptim.com/mac" target="_blank"
+				rel="noreferrer noopener">ImageOptim</a>.</dd>
 	</dl>
 </body>
 
