--- a/adaptive-icons/index.html
+++ b/adaptive-icons/index.html
@@ -20,10 +20,19 @@
 
 			display: flex;
 		}
+
+		form {
+			float: right;
+		}
 	</style>
 </head>
 
 <body>
+	<form>
+		<input type="number" id="size" value="24" min="16" max="82">
+		<label for="size">Icon Größe</label>
+		<button type="submit">Größe verändern</button>
+	</form>
 	<h2>Illustrator</h2>
 	<ol>
 		<li>
@@ -239,6 +248,16 @@
 		<dd>Same as <i>Regular</i>, but additionally run through <a href="https://imageoptim.com/mac" target="_blank"
 				rel="noreferrer noopener">ImageOptim</a>.</dd>
 	</dl>
+
+	<script>
+		document.querySelector('form button').hidden = true;
+		document.querySelector('form').addEventListener('submit', event => {
+			event.preventDefault();
+		});
+		document.querySelector('form input').addEventListener('change', event => {
+			document.documentElement.style.setProperty("--icon-height", event.target.value);
+		});
+	</script>
 </body>
 
 </html>
