feat: added the converted variants

--- a/adaptive-icons/index.html
+++ b/adaptive-icons/index.html
@@ -102,6 +102,45 @@
 			</dl>
 		</li>
 		<li>
+			<h3>Regular - stroke to fill</h3>
+			<dl>
+				<dt>24--Arrow-Right--Filled.svg
+				</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Illustrator/24--Arrow-Right--Filled.svg#filled">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Arrow-Right--Outlined.svg
+				</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Illustrator/24--Arrow-Right--Outlined.svg#outlined">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Filled.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Illustrator/24--Bug--Filled.svg#filled">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Outlined.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Illustrator/24--Bug--Outlined.svg#outlined">
+						</use>
+					</svg>
+				</dd>
+			</dl>
+		</li>
+		<li>
 			<h3>Optimized</h3>
 			<dl>
 				<dt>24--Arrow-Right--Filled.svg</dt>
@@ -131,6 +170,45 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use href="optimized/Illustrator/24--Bug--Outlined.svg#icon">
+						</use>
+					</svg>
+				</dd>
+			</dl>
+		</li>
+		<li>
+			<h3>Optimized - stroke to fill</h3>
+			<dl>
+				<dt>24--Arrow-Right--Filled.svg
+				</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Illustrator/24--Arrow-Right--Filled.svg#icon">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Arrow-Right--Outlined.svg
+				</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Illustrator/24--Arrow-Right--Outlined.svg#icon">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Filled.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Illustrator/24--Bug--Filled.svg#icon">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Outlined.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Illustrator/24--Bug--Outlined.svg#icon">
 						</use>
 					</svg>
 				</dd>
@@ -201,6 +279,43 @@
 			</dl>
 		</li>
 		<li>
+			<h3>Regular - stroke to fill</h3>
+			<dl>
+				<dt>24--Arrow-Right--Filled.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Sketch/24--Arrow-Right--Filled.svg#3">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Arrow-Right--Outlined.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Sketch/24--Arrow-Right--Outlined.svg#3">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Filled.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Sketch/24--Bug--Filled.svg#3">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Outlined.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Sketch/24--Bug--Outlined.svg#3">
+						</use>
+					</svg>
+				</dd>
+			</dl>
+		</li>
+		<li>
 			<h3>Optimized</h3>
 			<dl>
 				<dt>24--Arrow-Right--Filled.svg</dt>
@@ -231,6 +346,44 @@
 				</dd>
 			</dl>
 		</li>
+		<li>
+
+			<h3>Optimized - stroke to fill</h3>
+			<dl>
+				<dt>24--Arrow-Right--Filled.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Sketch/24--Arrow-Right--Filled.svg#icon">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Arrow-Right--Outlined.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Sketch/24--Arrow-Right--Outlined.svg#icon">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Filled.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Sketch/24--Bug--Filled.svg#icon">
+						</use>
+					</svg>
+				</dd>
+				<dt>24--Bug--Outlined.svg</dt>
+				<dd>
+					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+						<use
+							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Sketch/24--Bug--Outlined.svg#icon">
+						</use>
+					</svg>
+				</dd>
+			</dl>
+		</li>
 	</ol>
 
 	<dl>
@@ -244,9 +397,13 @@
 			(<code>stroke-width: var(--stroke-width, 2)</code>) and attribute
 			<code>vector-effect="non-scaling-stroke"</code> defined within the SVG files.
 		</dd>
+		<dt>Regular - stroke to fill</dt>
+		<dd>Same as <i>Regular</i>, additionally converted <code>stroke</code> to <code>fill</code>.</dd>
 		<dt>Optimized</dt>
 		<dd>Same as <i>Regular</i>, but additionally run through <a href="https://imageoptim.com/mac" target="_blank"
 				rel="noreferrer noopener">ImageOptim</a>.</dd>
+		<dt>Optimized - stroke to fill</dt>
+		<dd>Same as <i>Optimized</i>, additionally converted <code>stroke</code> to <code>fill</code>.</dd>
 	</dl>
 
 	<script>
