--- a/adaptive-icons/index.html
+++ b/adaptive-icons/index.html
@@ -146,16 +146,14 @@
 				<dt>24--Arrow-Right--Filled.svg</dt>
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-						<use
-							href="optimized/Illustrator/24--Arrow-Right--Filled.svg#icon">
+						<use href="optimized/Illustrator/24--Arrow-Right--Filled.svg#icon">
 						</use>
 					</svg>
 				</dd>
 				<dt>24--Arrow-Right--Outlined.svg</dt>
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-						<use
-							href="optimized/Illustrator/24--Arrow-Right--Outlined.svg#icon">
+						<use href="optimized/Illustrator/24--Arrow-Right--Outlined.svg#icon">
 						</use>
 					</svg>
 				</dd>
