--- a/adaptive-icons/index.html
+++ b/adaptive-icons/index.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Document</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@db-ui/core@2.3.0/dist/css/db-ui-core.general.css"
+		crossorigin="anonymous">
 	<style>
 		svg {
 			aspect-ratio: 1;
