fix: correcting the references to the SVGs

--- a/adaptive-icons/index.html
+++ b/adaptive-icons/index.html
@@ -111,7 +111,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Illustrator/24--Arrow-Right--Filled.svg#filled">
+							href="regular-converted/Illustrator/24--Arrow-Right--Filled.svg#filled">
 						</use>
 					</svg>
 				</dd>
@@ -120,7 +120,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Illustrator/24--Arrow-Right--Outlined.svg#outlined">
+							href="regular-converted/Illustrator/24--Arrow-Right--Outlined.svg#outlined">
 						</use>
 					</svg>
 				</dd>
@@ -128,7 +128,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Illustrator/24--Bug--Filled.svg#filled">
+							href="regular-converted/Illustrator/24--Bug--Filled.svg#filled">
 						</use>
 					</svg>
 				</dd>
@@ -136,7 +136,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Illustrator/24--Bug--Outlined.svg#outlined">
+							href="regular-converted/Illustrator/24--Bug--Outlined.svg#outlined">
 						</use>
 					</svg>
 				</dd>
@@ -183,7 +183,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Illustrator/24--Arrow-Right--Filled.svg#icon">
+							href="optimized-converted/Illustrator/24--Arrow-Right--Filled.svg#icon">
 						</use>
 					</svg>
 				</dd>
@@ -192,7 +192,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Illustrator/24--Arrow-Right--Outlined.svg#icon">
+							href="optimized-converted/Illustrator/24--Arrow-Right--Outlined.svg#icon">
 						</use>
 					</svg>
 				</dd>
@@ -200,7 +200,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Illustrator/24--Bug--Filled.svg#icon">
+							href="optimized-converted/Illustrator/24--Bug--Filled.svg#icon">
 						</use>
 					</svg>
 				</dd>
@@ -208,7 +208,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Illustrator/24--Bug--Outlined.svg#icon">
+							href="optimized-converted/Illustrator/24--Bug--Outlined.svg#icon">
 						</use>
 					</svg>
 				</dd>
@@ -285,7 +285,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Sketch/24--Arrow-Right--Filled.svg#3">
+							href="regular-converted/Sketch/24--Arrow-Right--Filled.svg#3">
 						</use>
 					</svg>
 				</dd>
@@ -293,7 +293,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Sketch/24--Arrow-Right--Outlined.svg#3">
+							href="regular-converted/Sketch/24--Arrow-Right--Outlined.svg#3">
 						</use>
 					</svg>
 				</dd>
@@ -301,7 +301,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Sketch/24--Bug--Filled.svg#3">
+							href="regular-converted/Sketch/24--Bug--Filled.svg#3">
 						</use>
 					</svg>
 				</dd>
@@ -309,7 +309,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - regular - stroke to fill/Sketch/24--Bug--Outlined.svg#3">
+							href="regular-converted/Sketch/24--Bug--Outlined.svg#3">
 						</use>
 					</svg>
 				</dd>
@@ -354,7 +354,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Sketch/24--Arrow-Right--Filled.svg#icon">
+							href="optimized-converted/Sketch/24--Arrow-Right--Filled.svg#icon">
 						</use>
 					</svg>
 				</dd>
@@ -362,7 +362,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Sketch/24--Arrow-Right--Outlined.svg#icon">
+							href="optimized-converted/Sketch/24--Arrow-Right--Outlined.svg#icon">
 						</use>
 					</svg>
 				</dd>
@@ -370,7 +370,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Sketch/24--Bug--Filled.svg#icon">
+							href="optimized-converted/Sketch/24--Bug--Filled.svg#icon">
 						</use>
 					</svg>
 				</dd>
@@ -378,7 +378,7 @@
 				<dd>
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 						<use
-							href="_DB-UX-DS--3.0--Test-Icons_V2 - optimized - stroke to fill/Sketch/24--Bug--Outlined.svg#icon">
+							href="optimized-converted/Sketch/24--Bug--Outlined.svg#icon">
 						</use>
 					</svg>
 				</dd>
