style: let's use width

--- a/adaptive-icons/index.html
+++ b/adaptive-icons/index.html
@@ -10,7 +10,7 @@
 		crossorigin="anonymous">
 	<style>
 		svg {
-			aspect-ratio: 1;
+			width: auto;
 			height: calc(var(--icon-height, 24) * 1px);
 			--stroke-width: calc(var(--icon-height, 24) / 16 + 0.5);
 		}
