--- a/adaptive-icons/index.html
+++ b/adaptive-icons/index.html
@@ -12,7 +12,7 @@
 		svg {
 			width: auto;
 			height: calc(var(--icon-height, 24) * 1px);
-			--stroke-width: calc(var(--icon-height, 24) / 16 + 0.5);
+			--stroke-width: calc((var(--icon-height, 24) / 16 + 0.5) * 24 / var(--icon-height, 24));
 		}
 
 		/* demo styles */
