refactor: added the newly fonts
to even also provide more sample icons

--- a/adaptive-icons/index.html
+++ b/adaptive-icons/index.html
@@ -26,8 +26,8 @@
 		@font-face {
 			font-family: 'icon-font';
 			src:
-				url('icon-font/icomoon-outline.woff2') format('woff2'),
-				url('icon-font/icomoon-outline.woff') format('woff');
+				url('icon-font/icons-outline.woff2') format('woff2'),
+				url('icon-font/icons-outline.woff') format('woff');
 			font-weight: 400;
 			font-style: normal;
 			font-display: block;
@@ -35,8 +35,8 @@
 		@font-face {
 			font-family: 'icon-font';
 			src:
-				url('icon-font/icomoon-solid.woff2') format('woff2'),
-				url('icon-font/icomoon-solid.woff') format('woff');
+				url('icon-font/icons-solid.woff2') format('woff2'),
+				url('icon-font/icons-solid.woff') format('woff');
 			font-weight: 700;
 			font-style: normal;
 			font-display: block;
@@ -126,6 +126,11 @@
 
 		<li data-icon="warning" data-icon-type="solid"></li>
 		<li data-icon="error" data-icon-type="solid"></li>
+
+		<li data-icon="bug" data-icon-type="outline"></li>
+		<li data-icon="arrow_forward" data-icon-type="outline"></li>
+
+		<li data-icon="arrow_forward" data-icon-type="solid"></li>
 	</ul>
 	<h3>Benefits</h3>
 	<ul>
